Added support for syllabus PDF document name
